--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "argon2": "^0.41.1",
     "axios": "^1.7.9",
     "boring-avatars": "^1.11.2",
     "class-variance-authority": "^0.7.1",
